# linux-test

./: CMakeLists.txt  main.cpp
include/: Gun.h  Solider.h
src/: Gun.cpp  Solider.cpp
